// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupInstruction Component should match snapshot 1`] = `
<div
  className="sabout_one"
>
  <img
    src="/images/tree.png"
  />
  <div
    className="sabout_one_info"
  >
    <span>
      Update or edit group to make it look more attractive
    </span>
    <a
      className="sec_btn"
      href="/"
      onClick={[Function]}
    >
      Update group
    </a>
    <a
      className="pri_btn"
      href="/edit-profile"
      onClick={[Function]}
    >
      Edit group
    </a>
  </div>
</div>
`;

exports[`GroupInstruction Component should match snapshot and hide buttons 1`] = `
<div
  className="sabout_one"
>
  <img
    src="/images/tree.png"
  />
  <div
    className="sabout_one_info"
  >
    <span>
      Update or edit group to make it look more attractive
    </span>
  </div>
</div>
`;
